--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -133,7 +133,7 @@
         <div class="inline fields">
             <div class="two wide field"></div>
             <div class="two wide field">
-                <label>สรพพสามิตสาขา</label>
+                <label>สรรพสามิตสาขา</label>
             </div>
             <div class="four wide field">
                 <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3"  (change)="setTravelTo($event)" >
@@ -269,7 +269,7 @@
             <div class="inline fields">
                 <div class="two wide field"></div>
                 <div class="two wide field">
-                    <label>สรพพสามิตสาขา</label>
+                    <label>สรรพสามิตสาขา</label>
                 </div>
                 <div class="four wide field">
                     <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3Add"  (change)="setTravelToAdd($event)" >
