--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -80,7 +80,7 @@
     </div><br><br><br>
     <div class="ui stackable center aligned page grid">
       <button class="ui mini primary button" type="button" (click)="onSearch()"><i class="search icon"></i> ค้นหา</button>
-      <button class="ui mini button " type="button" (click)="onClear()"><i class="sync icon"></i> ล้างข้อมูล</button>
+      <button class="ui mini button " type="button" (click)="onClear()"><i class="refresh icon"></i> ล้างข้อมูล</button>
       <button class="ui mini green button" routerLink="/int05/1/1/1"><i class="add icon"></i>เพิ่มข้อมูล</button>
     </div><br>
   </form>
