--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-10/int06-10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-10/int06-10.component.html
@@ -61,7 +61,7 @@
           <button class="ui mini primary button"  type="button" (click)="onSearch()">
             <i class="search icon"></i> ค้นหา </button>
           <button class="ui mini button" type="button" (click)="onClear()">
-            <i class="sync icon"></i> ล้างข้อมูล </button>
+            <i class="refresh  icon"></i> ล้างข้อมูล </button>
           <button class="ui primary  mini button"  [routerLink]="[ '/int06/10/2'] ">
             <i class="list ul icon"></i> รายการใบเบิก </button>
           <button class="ui green mini button" [routerLink]="[ '/int06/10/1'] ">
