--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -28,7 +28,7 @@
             <div class="ui input left icon">
               <i class="time icon"></i>
               <input type="calendar" readonly="" id="calendarraw" name="calendarraw" [attr.required]="true"
-                autocomplete="off" placeholder="วว/ดด/ปปปป">
+                autocomplete="off" placeholder="ดด/ปปปป">
             </div>
           </div>
           <div class="one wide field"></div>
@@ -39,7 +39,7 @@
             <div class="ui input left icon">
               <i class="time icon"></i>
               <input type="calendar" readonly="" id="calendar1raw" name="calendar1raw" [attr.required]="true"
-                autocomplete="off" placeholder="วว/ดด/ปปปป">
+                autocomplete="off" placeholder="ดด/ปปปป">
             </div>
           </div>
           <div class="one wide field">
